versions/v4.0.0/samples/modules/index.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/samples/modules/index.html
original_path: samples/modules/index.html
---

# External modules

These samples demonstrate the use of external modules in Zephyr.

- [Android's Context Hub Runtime Environment (CHRE)](chre/README.md#chre "Run nanoapps on Zephyr using the Context Hub Runtime Environment (CHRE).")Run nanoapps on Zephyr using the Context Hub Runtime Environment (CHRE).
- [CANopenNode](canopennode/README.md#canopennode "Use the CANopenNode CANopen protocol stack in Zephyr.")Use the CANopenNode CANopen protocol stack in Zephyr.
- [Nanopb](nanopb/README.md#nanopb "Serialize and deserialize structured data using the nanopb module.")Serialize and deserialize structured data using the nanopb module.

## [CMSIS-DSP](cmsis_dsp/cmsis_dsp.md)

- [CMSIS-DSP moving average](cmsis_dsp/moving_average/README.md#cmsis-dsp-moving-average "Use the CMSIS-DSP library to calculate the moving average of a signal.")Use the CMSIS-DSP library to calculate the moving average of a signal.

## [Compression](compression/compression.md)

- [LZ4](compression/lz4/README.md#lz4 "Compress and decompress data using the LZ4 module.")Compress and decompress data using the LZ4 module.

## [LVGL](lvgl/lvgl.md)

- [LVGL demos](lvgl/demos/README.md#lvgl-demos "Run LVGL built-in demos.")Run LVGL built-in demos.
- [LVGL line chart with accelerometer data](lvgl/accelerometer_chart/README.md#lvgl-accelerometer-chart "Display acceleration data on a real-time chart using LVGL.")Display acceleration data on a real-time chart using LVGL.

## [TensorFlow Lite for Microcontrollers](tflite-micro/tflite-micro.md)

- [Hello World](tflite-micro/hello_world/README.md#tflite-hello-world "Replicate a sine wave using TensorFlow Lite for Microcontrollers.")Replicate a sine wave using TensorFlow Lite for Microcontrollers.
- [Magic Wand](tflite-micro/magic_wand/README.md#tflite-magicwand "Recognize gestures from an accelerometer using TensorFlow Lite for Microcontrollers and a 20KB neural network.")Recognize gestures from an accelerometer using TensorFlow Lite for Microcontrollers and a 20KB
  neural network.
- [TensorFlow Lite for Microcontrollers on Arm Ethos-U](tflite-micro/tflm_ethosu/README.md#tflite-ethosu "Run an inference using an optimized TFLite model on Arm Ethos-U NPU.")Run an inference using an optimized TFLite model on Arm Ethos-U NPU.

## [Apache Thrift](thrift/thrift.md)

- [Apache Thrift Hello World](thrift/hello/README.md#thrift-hello "Implement a simple Apache Thrift client-server application.")Implement a simple Apache Thrift client-server application.
